tests/bad/bad_dereferencing.glaz
fn main() {
  let x = 10;
  unsafe { _ = x.*; }
}
